# helgarahi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cell.hpp  header.hpp  helgarahi.h  row.hpp  sheet.hpp  table.hpp  value.hpp  xlsx.h  xlsx.hpp  xml.h
include_old/: cell.hpp  header.hpp
src/: cell.cpp  header.cpp  main.c  main.cpp  parser.c  row.c  row.cpp  sheet.c  sheet.cpp  sheet_new.c  table.cpp  workbook.c  xlsx.c  xlsx.cpp  xml.c
src_old/: cell.cpp  header.cpp  sheet.cpp  table.cpp
