cmake_minimum_required(VERSION 3.10)
project("helgarahi" VERSION 0.0.1)
FILE(GLOB SRC_HPP include/*.hpp)
FILE(GLOB SRC_H include/*.h)
FILE(GLOB SRC_CPP src/*.cpp)
FILE(GLOB SRC_C src/*.c)
add_library(helgarahi SHARED ${SRC_C} ${SRC_CPP})
target_include_directories(helgarahi PUBLIC include)
target_include_directories(helgarahi PRIVATE /usr/include/libxml2)
target_link_libraries(helgarahi sqlite3 csv xml2 zip)
install(TARGETS helgarahi)
install(DIRECTORY include/ DESTINATION include/${PROJECT_NAME})